cp: 	PR c++/20789 	* decl.c (cp_finish_decl): Clear runtime runtime initialization if 	in-class decl's initializer is bad.

PR c++/21929
	* parser.c (struct cp_parser): Document that scope could be
	error_mark.
	(cp_parser_diagnose_invalid_type_name): Cope with error_mark for
	scope.
	(cp_parser_nested_name_specifier): Return NULL_TREE on error.
	(cp_parser_postfix_expression): Deal with null or error_mark
	scope.
	(cp_parser_elaborated_type_specifier): Adjust
	cp_parser_nested_name_specifier call.

	* parser (cp_parser_skip_to_end_of_block_or_statement): Cleanup.
testsuite:
	PR c++/21929
	* g++.dg/parse/crash26.C: New.

	PR c++/20789
	* g++.dg/init/member1.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@100880 138bc75d-0d04-0410-961f-82ee72b054a4